<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F475C"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_text1"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_seventeen"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password_text2"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/email" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/signup_edittext_color"
                android:textColorHint="@color/signup_edittext_color"
                android:textSize="@dimen/font_size_seventeen"></EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:background="@color/login_text_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/textView_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/button_submit"
                android:text="@string/login_text"
                android:textColor="@color/signup_edittext_color"
                android:textSize="@dimen/font_size_seventeen" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:background="@color/signup_btn_bg_color"
                android:text="@string/login"
                android:textColor="@color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_text_1"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/bottom_text_2"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>