<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/choose_type"
        android:textColor="@color/dialog_title_color"
        android:textSize="@dimen/font_size_seventeen"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#bfbfbf" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButton_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:button="@null"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/radio_button_selector"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:text="@string/type_student"
            android:textColor="@color/dialog_title_color"
            android:textSize="@dimen/font_size_seventeen" />

        <RadioButton
            android:id="@+id/radioButton_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/white"
            android:button="@null"
            android:layout_marginTop="12dp"
            android:drawablePadding="28dp"
            android:drawableRight="@drawable/radio_button_selector"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:text="@string/type_parent"
            android:textColor="@color/dialog_title_color"
            android:textSize="@dimen/font_size_seventeen" />

        <RadioButton
            android:id="@+id/radioButton_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:button="@null"
            android:drawablePadding="20dp"
            android:layout_marginTop="12dp"
            android:drawableRight="@drawable/radio_button_selector"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:text="@string/type_teacher"
            android:textColor="@color/dialog_title_color"
            android:textSize="@dimen/font_size_seventeen"
            android:checked="false" />

        <RadioButton
            android:id="@+id/radioButton_institute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/white"
            android:button="@null"
            android:layout_marginTop="12dp"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/radio_button_selector"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:text="@string/type_institute"
            android:textColor="@color/dialog_title_color"
            android:textSize="@dimen/font_size_seventeen" />
    </RadioGroup>

</LinearLayout>