<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingBottom="30dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/editText_userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/signup_edittext_color"
                android:textColorHint="@color/signup_edittext_color"
                android:textSize="@dimen/font_size_seventeen" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:background="@color/signup_edittext_border_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/signup_edittext_color"
                android:textColorHint="@color/signup_edittext_color"
                android:textSize="@dimen/font_size_seventeen" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:background="@color/signup_edittext_border_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" >

            <TextView
                android:id="@+id/textView_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/button_login"
                android:gravity="center_vertical"
                android:text="@string/forgot_password"
                android:textColor="@color/signup_edittext_color"
                android:textSize="@dimen/font_size_seventeen" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/signup_btn_bg_color"
                android:text="@string/login"
                android:textColor="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_text_1"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/bottom_text_2"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>