<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView_tutor"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/image_placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/imageView_tutor"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView_tutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/tutor"
                android:textSize="@dimen/font_size_medium"
                android:textColor="@color/list_tutor_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_tutor_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_medium"
                android:layout_toRightOf="@+id/textView_tutor"
                android:textColor="@color/list_tutor_type_color" />

            <ImageView
                android:id="@+id/imageView_detail"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/textView_details"
                android:contentDescription="@string/app_name"
                android:src="@drawable/view_detail" />

            <TextView
                android:id="@+id/textView_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:text="@string/view_detail"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/list_view_detail_color" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/list_label_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/list_label_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/list_label_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/list_label_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skills"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/list_label_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/list_label_color" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>