<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/tutor_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_view"
        android:cacheColorHint="@android:color/transparent"
        android:divider="#bfbfbf"
        android:dividerHeight="1dp"></ListView>

    <View
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/bottom_layout"
        android:background="#bfbfbf" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/request"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/requests"
                android:textColor="@color/list_tutor_color" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c3c3c3" />

        <LinearLayout
            android:id="@+id/accept_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/accept"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/accept"
                android:textColor="@color/inactive_tab_color" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c3c3c3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_denied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/deny"
                android:drawablePadding="8dp"
                android:text="@string/denied"
                android:textColor="@color/inactive_tab_color" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>